# ds-experiment

./: .gitignore  Dockerfile  README.md  build_docker.sh  ds_setup.sh  handoff.md  submit_l40s.sh
cpp/: CMakeLists.txt  ds_add.cpp  ds_from_f32.cpp  ds_from_f64.cpp  ds_fused_add_mul.cpp  ds_fused_add_mul_to_f64.cpp  ds_fused_add_mul_to_f64_cuda.cu  ds_fused_add_sub_to_f64_cuda.cu  ds_fused_axpy.cpp  ds_mul.cpp  ds_recurrence_add_mul_to_f64_cuda.cu  ds_sub.cpp  ds_to_f32.cpp  ds_to_f64.cpp
double_single_ray/: README.md  a.c  rtlib.c  test_ds
double_single_ray/llvm-accuracy-analysis-k-test/: .gitignore  README.md
double_single_ray/llvm-accuracy-analysis-k-test/double-single-lib/: Makefile  double-binary32.c  double-binary32.h  floatingpoint.hpp  floatingpointimplem.hpp
double_single_ray/llvm-accuracy-analysis-k-test/test/: test.cpp
double_single_ray/skeleton/: Skeleton.cpp
pjrt_plugin/: CMakeLists.txt  ds_pjrt_plugin.cpp
python/: benchmark_dp_gpu_cancellation_csv.py  benchmark_ds_fused.py  benchmark_ds_fused_to_f64.py  benchmark_ds_gpu.py  benchmark_ds_gpu_cancellation.py  benchmark_ds_gpu_cancellation_timing.py  benchmark_ds_gpu_cancellation_timing_csv.py  benchmark_ds_gpu_clean.py  benchmark_ds_gpu_intensity_sweep.py  benchmark_ds_gpu_intensity_sweep_internal.py  benchmark_ds_overhead.py  benchmark_ds_per_op.py  ds_results_compiler_pass_h100.txt  ds_results_h100.txt  export_baseline.py  plot_ds_f64_vs_k_external_internal.py  plot_ds_gpu_cancellation_heatmaps.py  plot_ds_gpu_cancellation_heatmaps_v2.py  plot_ds_gpu_cancellation_timing_csv.py  plot_ds_gpu_cancellation_timing_csv_v2.py  plot_ds_gpu_cancellation_tradeoff_clean.py  plot_ds_heatmaps.py  test_baseline.py  test_ds_add.py  test_ds_cancellation.py  test_ds_cancellation_grid.py  test_ds_cancellation_grid_mathtruth.py  test_ds_cancellation_grid_mathtruth_csv.py  test_ds_cancellation_sweep_detailed.py  test_ds_cancellation_sweep_summary.py  test_ds_from_f64.py  test_ds_fused_add_mul.py  test_ds_fused_add_mul_to_f64.py  test_ds_fused_add_mul_to_f64_cuda.py  test_ds_mul.py  test_ds_nontrivial.py  test_ds_recurrence_add_mul_to_f64_cuda.py  test_ds_roundtrip.py  test_ds_sub.py  test_ds_vs_f32.py  (+2 more)
stablehlo_pass/: CMakeLists.txt  DsFFIPass.cpp  DsTransformPass.cpp  mlir-ds-ffi-opt.cpp  mlir-ds-opt.cpp
tests/: bench_dot_product.py  bench_f64_vs_ds.py  bench_matmul.py  ds_ref.py  run_tests.sh  test_dot_product.py  test_f64_ds.py  test_matmul.py
